<resources>
    <string name="app_name">WeatherApp3</string>
    <string name="city">Город</string>
    <string name="pressure">Давление</string>
    <string name="humidity">Влажность</string>
    <string name="temperature">Температура</string>
    <string name="wind_speed">Скорость ветра</string>
    <string name="refresh">Обновить</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">History</string>
    <string name="search">Search</string>
    <string name="exclamation">Важное сообщение!</string>
    <string name="press_button">Сервер не отвечает...</string>
    <string name="button">Закрыть</string>
</resources>